--- a/phx-react/apps/wander_web/lib/wander_web/components/layouts/root.html.heex
+++ b/phx-react/apps/wander_web/lib/wander_web/components/layouts/root.html.heex
@@ -7,9 +7,9 @@
     <.live_title default="Wander" suffix=" · Phoenix Framework">
       {assigns[:page_title]}
     </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
-    </script>
+    <link phx-track-static rel="stylesheet" href={~p"/assets/wander/global.css"} />
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/global.js"}></script>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
   <body class="bg-white">
     {@inner_content}
