--- a/phx-react/apps/wander_web/assets/wander/global.css
+++ b/phx-react/apps/wander_web/assets/wander/global.css
@@ -18,4 +18,4 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* This file is for your main application CSS */
+@import "../vendor/leaflet/leaflet.css";
