[gw] Add MapLibre map

--- a/phx-react/apps/wander_web/assets/wander/global.css
+++ b/phx-react/apps/wander_web/assets/wander/global.css
@@ -19,3 +19,4 @@
 @import "tailwindcss/utilities";
 
 @import "../vendor/leaflet/leaflet.css";
+@import "../node_modules/maplibre-gl/dist/maplibre-gl.css";
