[gw] Add 'Material Symbols' variable font for moar icons

--- a/phx-react/apps/wander_web/assets/wander/global.css
+++ b/phx-react/apps/wander_web/assets/wander/global.css
@@ -18,5 +18,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import "./common/styles/material_symbols";
+
 @import "../vendor/leaflet/leaflet.css";
 @import "../node_modules/maplibre-gl/dist/maplibre-gl.css";
