--- a/phx-react/apps/wander_web/lib/wander_web/components/layouts/root.html.heex
+++ b/phx-react/apps/wander_web/lib/wander_web/components/layouts/root.html.heex
@@ -8,8 +8,10 @@
       {assigns[:page_title]}
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/wander/global.css"} />
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/global.js"}></script>
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/global.js"}>
+    </script>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
+    </script>
   </head>
   <body class={[
     "min-h-[100vh]",
